<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="Stages"
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_directions">

        </item>
        <item
            android:id="@+id/nav_findMe"
            android:icon="@drawable/ic_my_location"
            android:title="@string/nav_find_me" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_action_warning"
            android:title="@string/nav_report" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_mail_outline"
            android:title="My reports" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/nav_profile"/>
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_preferences" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
